# ubpe-native

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
ubpe-native/: ubpe.py  ubpe_base.py  ubpe_classic.py  utils.py
ubpe_native/: __init__.py  ubpe.py  ubpe_base.py  ubpe_classic.py  utils.py
ubpe_native/utils/: __init__.py  logger.py  pair_counter.py  splitter.py  ssstree.py  top_elements.py
