[project]
name = "ubpe-native"
version = "0.2.2"
description = "Python implementation of UBPE tokenization algorithm."
authors = [{ name = "Scurrra (Ilja Baroŭski)", email = "iscurrra@gmail.com" }]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/Scurrra/ubpe-native.git"
Issues = "https://github.com/Scurrra/ubpe-native/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
